--- a/Battleship/index.html
+++ b/Battleship/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
 
-<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script type="text/javascript" src="app.js"></script>
+	<div id="container">
+		<div class="game-board" id="guess-board">
+			
+		</div>
+	</div>
+
+	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<script type="text/javascript" src="app.js">
+
+	</script>
 </body>
 </html>
