Added code to app.js to remove board if restarted

--- a/Battleship/index.html
+++ b/Battleship/index.html
@@ -7,11 +7,9 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
+	<button id="game-starter">Start The Game</button>
 	<div id="container">
-		<div class="game-board" id="guess-board">
-			
-		</div>
+
 	</div>
 
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
