--- a/Battleship/index.html
+++ b/Battleship/index.html
@@ -5,6 +5,12 @@
 	<meta charset="utf-8" />
 	<title>Battleship: The Game!</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+
+  <style>
+  #draggable { width: 100px; height: 100px; padding: 0.5em; float: left; margin: 10px 10px 10px 0; }
+  #droppable { width: 150px; height: 150px; padding: 0.5em; float: left; margin: 10px; }
+  </style>
 </head>
 <body>
 	<button id="game-starter">Start The Game</button>
