--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<title>Battleship: The Game!</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+	<!-- <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script> -->
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <style>
   /*#draggable { width: 100px; height: 100px; padding: 0.5em; float: left; margin: 10px 10px 10px 0; }
