completed dynamic reset of game functions

--- a/index.html
+++ b/index.html
@@ -22,47 +22,47 @@
 				<li class="boat-button" id="place-aircraft-carrier">
 					<img src="">
 					<div class="block-holder">
-						<div class="boat-blocks"></div>
-						<div class="boat-blocks"></div>
-						<div class="boat-blocks"></div>
-						<div class="boat-blocks"></div>
-						<div class="boat-blocks"></div>
+						<div type="boat-blocks" class="boatA"></div>
+						<div type="boat-blocks" class="boatA"></div>
+						<div type="boat-blocks" class="boatA"></div>
+						<div type="boat-blocks" class="boatA"></div>
+						<div type="boat-blocks" class="boatA"></div>
 					</div>
 				</li>
 				<li>Battleship</li>
 				<li class="boat-button" id="place-battleship">
 					<img src="">
 					<div class="block-holder">
-						<div class="boat-blocks"></div>
-						<div class="boat-blocks"></div>
-						<div class="boat-blocks"></div>
-						<div class="boat-blocks"></div>
+						<div type="boat-blocks" class="boatB"></div>
+						<div type="boat-blocks" class="boatB"></div>
+						<div type="boat-blocks" class="boatB"></div>
+						<div type="boat-blocks" class="boatB"></div>
 					</div>
 				</li>
 				<li>Cruiser</li>
 				<li class="boat-button" id="place-cruiser">
 					<img src="">
 					<div class="block-holder">
-						<div class="boat-blocks"></div>
-						<div class="boat-blocks"></div>
-						<div class="boat-blocks"></div>
+						<div type="boat-blocks" class="boatC"></div>
+						<div type="boat-blocks" class="boatC"></div>
+						<div type="boat-blocks" class="boatC"></div>
 					</div>
 				</li>
 				<li>Detroyer</li>
 				<li class="boat-button" id="place-destroyer">
 					<img src="">
 					<div class="block-holder">
-						<div class="boat-blocks"></div>
-						<div class="boat-blocks"></div>
-						<div class="boat-blocks"></div>
+						<div type="boat-blocks" class="boatD"></div>
+						<div type="boat-blocks" class="boatD"></div>
+						<div type="boat-blocks" class="boatD"></div>
 					</div>
 				</li>
 				<li>Frigate</li>
 				<li class="boat-button" id="place-frigate">
 					<img src="">
 					<div class="block-holder">
-						<div class="boat-blocks"></div>
-						<div class="boat-blocks"></div>
+						<div type="boat-blocks" class="boatF"></div>
+						<div type="boat-blocks" class="boatF"></div>
 					</div>
 				</li>
 			</ul>
